trunk/Archive2/49/6b028d24fd63f7/output
main.cpp:1:1: error: expected unqualified-id before 'for'
 for(auto& a_client: clients)
 ^
